alignment, wht border,box shadows, and other styling on main and detail pages, tabrow fixed height testing

--- a/frontend/src/pages/profile/profile.css
+++ b/frontend/src/pages/profile/profile.css
@@ -100,6 +100,9 @@
   border-radius: 3px;
   box-shadow: 0px 7px 15px rgba(20,33,61,.4);
   padding: 1rem;
+
+  height: 60vh;
+  overflow: scroll;
 }
 .tabRowSubMenu {
   margin: 0 auto;
